--- a/MessageStore/dev/MessageStore-http.yaml
+++ b/MessageStore/dev/MessageStore-http.yaml
@@ -3,7 +3,7 @@
 server:
   listener: 
   #Controls whether api endpoint accepts HTTP or HTTPS
-    config: "HTTPS_Listener_config"
+    config: "HTTP_Listener_config"
     #config: "HTTP_Listener_config"
     
   http:
