--- a/MessageBroker/resources/configuration/srs-config.yaml
+++ b/MessageBroker/resources/configuration/srs-config.yaml
@@ -5,48 +5,18 @@ outboundEndpoints:
 - name: notRouted
   flow:
     name: nullOutboundFlow          
-- name: WMA
+- name: EP
   flow:
-    name: fileOutboundFlow
+    name: httpOutboundFlow
     parameters:
     - name: "path"
-      value: "./outbound/test-output-wma"
+      value: "/connect-lpa-api/v1/ingestion"
     - name: "fileName"
       value: "outputMessageWMA.xml"
-- name: TMA
-  flow:
-    name: fileOutboundFlow
-    parameters:
-    - name: "path"
-      value: "./outbound/test-output-tma"
-    - name: "fileName"
-      value: "outputMessageTMA.json"
-- name: ACK.GLOBAL
-  flow:
-    name: fileOutboundFlow
-    parameters:
-    - name: "path"
-      value: "./outbound/ack"
-    - name: "fileName"
-      value: "ack.json"
-- name: LOC.DC0001
-  flow:
-    name: fileOutboundFlow
-    parameters:
-    - name: "path"
-      value: "./outbound/ack"
-    - name: "fileName"
-      value: "ack-error.json"
 outboundMappings:
-  - receiver: 'WMA.WEST|WMA.EAST'
+  - receiver: 'EP.POC'
     request: '*:*:*'
-    outboundEndpoint: 'WMA'
-  - receiver: 'TMA.WEST|TMA.EAST'
-    request: '*:*:*'
-    outboundEndpoint: 'TMA'
-  - receiver: 'LOC.DC0001'
-    request: '*:*:*'
-    outboundEndpoint: 'LOC.DC0001'
+    outboundEndpoint: 'EP'
   - receiver: 'NOT.ROUTED'
     request: '*:*:*'
     outboundEndpoint: 'notRouted'
